welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:4: error: value recule is not a member of Unit
   porteBiscuit(); prendBiscuit();recule();recule()recule()recule()recule()
                                                   ^